# KronosSimulator

./: README.md
KronosSimulator-LMU/: .gitignore  CreatingNewWorld.md  README.md  start.sh
KronosSimulator-LMU/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
KronosSimulator-LMU/rover/ros2/src/simulator/kiwi_gazebo/: CMakeLists.txt  README.md  package.xml
KronosSimulator-LMU/rover/ros2/src/simulator/kiwi_gazebo/launch/: LMU.launch.py
KronosSimulator-LMU/rover/ros2/src/simulator/kiwi_gazebo/lib/: labelCreator.cpp  labelCreator.h  tinyxml2.h
KronosSimulator-LMU/rover/ros2/src/simulator/kiwi_gazebo/meshes/: door.dae  outside_couch.dae  plant.dae  toilet.dae
KronosSimulator-LMU/rover/ros2/src/simulator/kiwi_gazebo/models/ground_plane/: model.config  model.sdf
KronosSimulator-LMU/rover/ros2/src/simulator/kiwi_gazebo/models/ground_plane/materials/scripts/: ground_plane.material
KronosSimulator-LMU/rover/ros2/src/simulator/kiwi_gazebo/src/: polygon_parser.cpp
KronosSimulator-LMU/rover/ros2/src/simulator/kiwi_gazebo/worlds/: 0_dolly_empty.world  1_dolly_city.world  2_mundo_medellin.world  3_LMU.world  dolly_city_sidewalk_obstacles.world
KronosSimulator-LMU/rover/ros2/src/spawning_services/: CMakeLists.txt  package.xml
KronosSimulator-LMU/rover/ros2/src/spawning_services/src/: spawning.cpp
KronosSimulator-LMU/rover/ros2/src/user_interface/: package.xml  setup.py
KronosSimulator-LMU/rover/ros2/src/user_interface/user_interface/: GUI.py
